@@ -1,5 +1,6 @@
-local L = LibStub("AceLocale-3.0"):NewLocale("SimpleILevel", "zhCN", true)
+local L = LibStub("AceLocale-3.0"):NewLocale("SimpleILevel", "zhCN");
 
-if ( L ) then
+if not L then return end
+
 --@localization(locale="zhCN", format="lua_additive_table")@
-end
+
